feat: Rewrite Prettier workflow & replace PNPM with Yarn
Use NPM scripts. Drop 3rd party action, use only actions from Github team. Properly cache Prettier
drastically reducing runtime. Format everything that isn't set in ignore
file.

Replace PNPM with Yarn. PNPM is problematic with Prettier. NPM 'node ci'
was modifying lock file. Yarn is better than NPM without breaking things
like PNPM.

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,15 @@
-# JSON
+# Hugo 
+public/
+resources/
 layouts/*.json
-package-lock.json
 assets/jsconfig.json
 
-# YAML
-# .github/
+# Node
+package-lock.json
+node_modules/
+
+# Workflows 
+.github/
+
+# Prettier
+.prettiercache
