--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "semi": false,
   "endOfLine": "lf",
   "trailingComma": "none",
+  "plugins": ["./node_modules/prettier-plugin-go-template"],
   "overrides": [
     {
       "files": ["*.html"],
