--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -23,5 +23,5 @@ jobs:
         uses: creyD/prettier_action@v4.2
         with:
           prettier_plugins: prettier-plugin-go-template
-          prettier_options: --config .prettierrc.js --write **/*.{js,css,scss,html,json,yml,md}
+          prettier_options: --write **/*.{js,css,scss,html,json,yml,md}
           only_changed: True
