--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,5 +5,5 @@ extends: eslint:recommended
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-ignorePatterns: ["!.prettierrc.js", "!.prettier.config.js"],
+ignorePatterns: ["!.prettierrc.js", "!.prettier.config.js"]
 rules: {}
