fix(workflow): Ignore workflow files
Actions can't write on workflows without special perms.

Try test from previous commit on a different file.

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,12 +1,12 @@
-# JSON
-layouts/*.json
-package-lock.json
-assets/jsconfig.json
-
-# YAML
-# .github/
-
-# Artifacts
+# Hugo 
 public/
 resources/
+layouts/*.json
+assets/jsconfig.json
+
+# Node
+package-lock.json
 node_modules/
+
+# Workflows 
+.github/
