--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "devDependencies": {
     "prettier": "^2.8.3",
     "prettier-plugin-go-template": "^0.0.13"
+  },
+  "scripts": {
+    "format": "prettier *** --write --cache --ignore-unknown --no-error-on-unmatched-pattern"
   }
 }
