--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 'latest'
-          cache: 'yarn'
+          cache: 'npm'
       
       - name: Install Node packages
         run: npm ci 
