--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Format Code
         run: npm run format
 
-      - uses: actions/checkout@v3
+      # - uses: actions/checkout@v3
 
       - name: Commit & Push Changes
         run: |
