--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -31,10 +31,10 @@ jobs:
         run: |
           if ! git diff-index HEAD --quiet --; then
             echo "Commiting changes"
+            _author="${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>"
             git config user.email "github-actions[bot]"
             git config user.name "github-actions[bot]@users.noreply.github.com"
-            git commit --all --message "Format with Prettier" \
-            --author ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+            git commit --all --message "Format with Prettier" --author "$_author"
             git push
           else
             echo "No changes to commit"
