--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,4 +1,7 @@
 name: Format Code
+description: 'Format all files with Prettier and commit change.'
+
+# Use .prettierignore to ignore paths
 
 on:
   push:
@@ -27,15 +30,17 @@ jobs:
       - name: Format Code
         run: npm run format
 
+
+      # TODO: If saner use https://github.com/stefanzweifel/git-auto-commit-action/
       - name: Commit & Push Changes
         run: |
-          if ! git diff-index HEAD --quiet --; then
+          if git diff-index --quiet HEAD --; then
+            echo "No changes to commit"
+          else
             echo "Commiting changes"
             _author="${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>"
             git config user.email "github-actions[bot]"
             git config user.name "github-actions[bot]@users.noreply.github.com"
             git commit --all --message "Format with Prettier" --author "$_author"
             git push
-          else
-            echo "No changes to commit"
           fi
