--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -30,14 +30,14 @@ jobs:
         run: npm run format
 
       - name: Commit & Push Changes
-        run: !raw |
-          if ! git diff-index --quiet HEAD --; then
+        run: |
+          if git diff-index --quiet HEAD --; then
+            echo "No changes to commit"
+          else
             echo "Commiting changes"
             _author="${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>"
             git config user.email "github-actions[bot]"
             git config user.name "github-actions[bot]@users.noreply.github.com"
-            git commit --all --message "Format with Prettier" --author "$_author" &&
+            git commit --all --message "Format with Prettier" --author "$_author"
             git push
-          else
-            echo "No changes to commit"
           fi
