--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Commit & Push Changes
         run: |
-          if git diff-index --quiet HEAD --; then
+          if git diff-index HEAD --; then
             echo "No changes to commit"
           else
             echo "Commiting changes"
