--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - namee: Setup Node
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 'latest'
