--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@main
         with:
           ref: ${{ github.head_ref }}
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@main
         with:
           node-version: 'latest'
           cache: 'yarn'
@@ -26,7 +26,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Prettier cache
-        uses: actions/cache@v3
+        uses: actions/cache@main
         with:
           path: .prettiercache
           key: ${{ runner.os }}-prettier
