ci: make prettier script more robust
'./' prevents a file with '--' in it's name to be interpreted as an
argument.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "prettier-plugin-go-template": "^0.0.13"
   },
   "scripts": {
-    "format": "prettier *** --write --cache --cache-location .prettiercache --ignore-unknown --no-error-on-unmatched-pattern"
+    "format": "prettier ./** --write --cache --cache-location .prettiercache --ignore-unknown --no-error-on-unmatched-pattern"
   }
 }
